Change logic for Role to be class not enum